--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=product
+spring.jpa.show-sql = true
+
+spring.datasource.username = postgres.zvmcikumnphevucgqqbx
+spring.datasource.password = a3-adpro-murifq
+spring.datasource.driverClassName = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
+spring.jpa.hibernate.ddl-auto = update
