--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,7 @@
-# Database config
 spring.datasource.username = postgres.zvmcikumnphevucgqqbx
 spring.datasource.password = a3-adpro-murifq
-spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
