--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
 spring.datasource.username = postgres.zvmcikumnphevucgqqbx
 spring.datasource.password = a3-adpro-murifq
 spring.datasource.driver-class-name = org.postgresql.Driver
