--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,3 +6,10 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+management.metrics.export.prometheus.enabled=true
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.jmx.exposure.include=*
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.metrics.distribution.sla.http.server.requests=100ms,150ms,250ms,500ms,1s
+management.metrics.enable.jvm=true
